fixed icon spacing, still needs work

--- a/app/assets/stylesheets/components/_info_modal.scss
+++ b/app/assets/stylesheets/components/_info_modal.scss
@@ -18,6 +18,9 @@
   }
   p.contact {
     padding-right: 15px;
+    i {
+      padding-right: 10px;
+    }
   }
 }
 
